# toystat

./: .pre-commit-config.yaml  404.html  index.html  pyproject.toml
.github/workflows/: build_docs.yaml  python-publish.yml  test.yaml
CHANGELOG/: index.html
quickstart/: index.html
